--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,12 @@
 // Customizations Here (Optional)
-$primary: purple;
+$success: #81ecec;
+$warning: #fab1a0;
 
 // @import "~bulma/css/bulma.css";
 @import "~bulma/bulma";
+
+.listrado{
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    background-color: #efefef;
+}
